syntax = "proto3";

package api;

option go_package = "./gen/go/api";

import "tasks.proto";
import "susi.proto";

service Todo {
    rpc Signup (SignupReq) returns (SignupResp) {}
    rpc Signin (SigninReq) returns (SigninResp) {}
    rpc AddTask (AddTaskReq) returns (AddTaskResp) {}
    rpc GetTask (GetTaskReq) returns (GetTaskResp) {}
    rpc GetAllTasks (GetAllTasksReq) returns (GetAllTasksResp) {}
    rpc UpdateTask (UpdateTaskReq) returns (UpdateTaskResp) {}
    rpc DeleteTask (DeleteTaskReq) returns (DeleteTaskResp) {}
}
