syntax = "proto3";

package api;

option go_package = "./gen/go/api";

message SignupReq {
    string firstName = 1;
    string lastName = 2;
    string email = 3;
    string password = 4;
}

message SignupResp {
    string accessJWT = 1;
    string userID = 2;
}

message SigninReq {
    string userID = 1;
    string password = 2;
}

message SigninResp {
    string accessJWT = 1;
}